# admission-rag-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  QUICK_START.md  RAG_IMPROVEMENTS.md  README.md  ROUTING_COMPLETION.md  ROUTING_README.md  SUMMARY.md  analytics.py  check_processes_urls.py  docker-compose.release.yml  docker-compose.yml  example.env  find_urls.py  get_language_urls.py  ingest_all.py  kb_audit_report.md  pyproject.toml  requirements.txt  routing_monitor.py  routing_stats.py  test_gemini_json_stream.py  test_integration_routing.py  test_parse.py  test_prompt.py  test_router.py  verify_kb_freshness.py
bot/: app.py  db.py  decorators.py  env.py  keyboards.py  memory.py  migrate.py  utils.py
bot/handlers/: engagement.py  feedback.py  (+5 more)
configs/: default.yaml
crag/: ab_testing.py  assertion_validator.py  llm_providers.py  observability.py  parent_child_chunking.py  pipeline.py  query_router.py  reranker.py  router.py  simple_rag.py  tag_set_layer.py  tools.py  yaml_facts_indexer.py
docs/: LLM_PROVIDERS.md  REINDEX_INSTRUCTIONS.md  REINDEX_KB.md  VECTOR_DB_COMPARISON.md
init_scripts/: clean_obsolete_messages.py  entry.sh  index_knowledge_base.py  init_bot_db.py  list_models.py
knowledge_base_old/: _sources_registry.md  schema.yaml
schema/: README.md
scripts/: verify_kb_freshness.py
tests/: eval_dataset.json  eval_rag.py  test_assertion_check.py  test_entity_filters.py  test_handlers_smoke.py  test_memory_facts.py  test_parent_child_chunking.py  test_pipeline_guardrails.py  test_rag_utils.py  test_reranker.py  test_tag_set_layer.py
(+49 files in other folders)
