[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "admission-rag-bot"
version = "2024.0.1"
authors = [
    {name = "Ilia Zharikov", email = "ilia.zharikov.dev@gmail.com"},
]
description = "Telegram bot powered by Conditional RAG for first-year students applying to Austrian universities"
requires-python = ">=3.11"
license = {file = "LICENSE"}
readme = "README.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"crag.prompt_templates" = ["*.txt"]

[tool.setuptools.packages.find]
namespaces = false
where = ["."]

[project.urls]
Repository = "https://github.com/Il101/admission-rag-bot"

[tool.isort]
profile = "black"
